--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <!--<action android:name="android.media.action.IMAGE_CAPTURE"/>
+    <category android:name="android.intent.category.DEFAULT"/>
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    -->
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fishhunt"
         tools:targetApi="31">
+
         <activity
 
             android:name=".CameraActivity"
