--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 android {
+    useLibrary("org.apache.http.legacy")
     namespace 'com.example.fishhunt'
     compileSdk 33
 
@@ -16,6 +17,17 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+//    packagingOptions {
+//        exclude("META-INF/DEPENDENCIES")
+//        exclude("META-INF/LICENSE")
+//        exclude("META-INF/LICENSE.txt")
+//        exclude("META-INF/license.txt")
+//        exclude("META-INF/NOTICE")
+//        exclude("META-INF/NOTICE.txt")
+//        exclude("META-INF/notice.txt")
+//        exclude("META-INF/ASL2.0")
+//        exclude("META-INF/*.kotlin_module")
+//    }
 
     buildTypes {
         release {
@@ -33,10 +45,15 @@ android {
 }
 
 dependencies {
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.volley:volley:1.2.1'
+
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
