--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ResultFailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ResultOkActivity"
+            android:exported="false" />
+        <activity
             android:name=".resultActivity"
             android:exported="false" />
         <activity
